all displays responsive for about me section. bug fix: project section overlap on about me section because of "height" css prop

--- a/project/portfolio/src/assets/SCSS/base/_reset.scss
+++ b/project/portfolio/src/assets/SCSS/base/_reset.scss
@@ -13,6 +13,10 @@ body {
 
 } /*remove default margin*/
 
+main{
+  display: flex;
+  flex-direction: column;
+}
 
 fieldset {
   border: none;
